--- a/app/templates/user-details.hbs
+++ b/app/templates/user-details.hbs
@@ -2,5 +2,5 @@
 <h1>User Details: {{@model.name}}</h1>
 <p>ID: {{@model.id}}</p>
 <p>Name: {{@model.name}}</p>
-<LinkTo @route="users.edit" @model={{@model}}>Edit this user</LinkTo>
+<LinkTo @route="user-edit" @model={{@model}}>Edit this user</LinkTo>
 <LinkTo @route="users">Back to Users List</LinkTo>
