--- a/app/templates/user-new.hbs
+++ b/app/templates/user-new.hbs
@@ -2,7 +2,7 @@
 <h1>Create New User</h1>
 <form {{on "submit" (fn this.saveUser @model)}}>
   <label for="name">Name:</label>
-  <Input @value={{@model.name}} id="name" required />
+  <input type="text" value={{@model.name}} id="name" required />
   <button type="submit">Save User</button>
 </form>
-<LinkTo @route="users">Cancel</LinkTo>}
+<LinkTo @route="users">Cancel</LinkTo>
