--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,36 @@
 {{page-title "Index"}}
 
-<h1>Welcome!</h1>
+<div class="container mt-4">
+  <h2 class="mb-4">Your Feed</h2>
+
+  <div class="row">
+    {{#each @model as |post|}}
+      <div class="col-md-12 mb-4">
+        <div class="card shadow-sm h-100">
+          <div class="card-body">
+            <h5 class="card-title">{{post.content}}</h5>
+            <h6 class="card-subtitle mb-2 text-muted">
+              Posted by:
+              <LinkTo
+                @route="user-details"
+                @model={{post.author}}
+              >{{post.author.name}}</LinkTo>
+            </h6>
+            <p class="card-text">
+              <small class="text-muted">
+                Posted on:
+                {{moment-format post.created "DD/MM/YY HH:mm"}}
+              </small>
+            </p>
+          </div>
+        </div>
+      </div>
+    {{else}}
+      <div class="col-12">
+        <div class="alert alert-info" role="alert">
+          No posts found in the system. Be the first to post something!
+        </div>
+      </div>
+    {{/each}}
+  </div>
+</div>
