--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,10 +1,11 @@
 {{page-title "Index"}}
 
 <div class="container mt-4">
+  <h2>Hello {{@model.user.name}}</h2>
   <h2 class="mb-4">Your Feed</h2>
 
   <div class="row">
-    {{#each @model as |post|}}
+    {{#each @model.posts as |post|}}
       <div class="col-md-12 mb-4">
         <LinkTo
           @route="post-details"
