--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -6,7 +6,7 @@
     <BsForm
       @formLayout="vertical"
       @model={{this}}
-      @onSubmit={{this.submit}}
+      @onSubmit={{this.addPost}}
       as |form|
     >
       <form.element
