--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -25,7 +25,7 @@
       <div class="col-md-12 mb-4">
         <LinkTo
           @route="post-details"
-          @model={{post}}
+          @model={{post.id}}
           class="card shadow-sm h-100 text-decoration-none text-dark"
         >
           <div class="card shadow-sm h-100">
