moved trends to trending page

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,6 +8,9 @@
         <nav.link-to @route="users">Users</nav.link-to>
       </nav.item>
       <nav.item>
+        <nav.link-to @route="trending">Trending</nav.link-to>
+      </nav.item>
+      <nav.item>
         <nav.link-to @route="register">Register</nav.link-to>
       </nav.item>
       <nav.item>
