can get and update date

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -11,6 +11,9 @@
         <nav.link-to @route="trending">Trending</nav.link-to>
       </nav.item>
       <nav.item>
+        <nav.link-to @route="birthday">Birthday</nav.link-to>
+      </nav.item>
+      <nav.item>
         <nav.link-to @route="register">Register</nav.link-to>
       </nav.item>
       <nav.item>
